--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_height"
         android:orientation="vertical"
-        android:paddingLeft="16dp">
+        android:paddingLeft="16dp"
+        android:background="#854">
 
         <TextView
             android:id="@+id/miwok_text_view"
@@ -38,6 +39,4 @@
             android:gravity="top"
             tools:text="one" />
     </LinearLayout>
-
-
 </LinearLayout>
